[gd_scene load_steps=24 format=3 uid="uid://pojacrnmnn0g"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_4axcp"]
[ext_resource type="Texture2D" uid="uid://dbtx5thfq1gjg" path="res://AssetBundle/Sprites/Foxy.png" id="1_msp8w"]
[ext_resource type="PackedScene" uid="uid://dr7qdcroycgld" path="res://Sences/Bullet.tscn" id="2_vjcax"]
[ext_resource type="AudioStream" uid="uid://cvh7itmulush5" path="res://AssetBundle/Audio/Gun.mp3" id="4_kaoif"]
[ext_resource type="AudioStream" uid="uid://be4ruwowqkpxa" path="res://AssetBundle/Audio/Running.mp3" id="5_ystse"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xiyu3"]
atlas = ExtResource("1_msp8w")
region = Rect2(0, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cn700"]
atlas = ExtResource("1_msp8w")
region = Rect2(33, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jjv28"]
atlas = ExtResource("1_msp8w")
region = Rect2(66, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7f27"]
atlas = ExtResource("1_msp8w")
region = Rect2(99, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_21hqy"]
atlas = ExtResource("1_msp8w")
region = Rect2(132, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfonr"]
atlas = ExtResource("1_msp8w")
region = Rect2(165, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvii2"]
atlas = ExtResource("1_msp8w")
region = Rect2(0, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lefty"]
atlas = ExtResource("1_msp8w")
region = Rect2(33, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0m74e"]
atlas = ExtResource("1_msp8w")
region = Rect2(66, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4jd0"]
atlas = ExtResource("1_msp8w")
region = Rect2(99, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_en4xj"]
atlas = ExtResource("1_msp8w")
region = Rect2(0, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eipch"]
atlas = ExtResource("1_msp8w")
region = Rect2(33, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8l1vs"]
atlas = ExtResource("1_msp8w")
region = Rect2(66, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nl0qb"]
atlas = ExtResource("1_msp8w")
region = Rect2(99, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fu2t8"]
atlas = ExtResource("1_msp8w")
region = Rect2(132, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5inx3"]
atlas = ExtResource("1_msp8w")
region = Rect2(165, 32, 33, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_gsg0w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xiyu3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cn700")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jjv28")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7f27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_21hqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfonr")
}],
"loop": true,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvii2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lefty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0m74e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4jd0")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_en4xj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eipch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8l1vs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nl0qb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fu2t8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5inx3")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_duq7v"]

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("animator")]
script = ExtResource("1_4axcp")
animator = NodePath("AnimatedSprite2D")
bullet_scene = ExtResource("2_vjcax")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_gsg0w")
animation = &"die"
autoplay = "idle"
frame_progress = 0.652696

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("CircleShape2D_duq7v")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_kaoif")

[node name="Running" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ystse")

[node name="Timer2" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_fire"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
